# sqlconstructor

./: README.md  pyproject.toml  pytest.ini
src/sql_constructor/: constants.py  helpers.py  sql_container.py  sql_cte.py  sql_query.py  sql_section.py
src/sqlconstructor/: __init__.py  cols.py  constants.py  helpers.py  sql_bultin_functions.py  sql_case.py  sql_col.py  sql_cols.py  sql_container.py  sql_cte.py  sql_enum.py  sql_filter.py  sql_filters.py  sql_json.py  sql_placeholder.py  sql_query.py  sql_section.py  sql_section_header.py  sql_val.py  sql_vals.py  sql_wrap.py  vals.py
tests/: test_base.py
tests/fixtures/: simple_query_dict.py
tests/sql_col/: test_add_radd.py
tests/sql_filter/: test_or.py
tests/test_cols/: test_inline.py  test_multiline.py  test_str_representation.py
tests/test_sql_bultin_functions/: test_coalesce.py  test_nullif.py
tests/test_sql_case/: test_init.py  test_str.py
tests/test_sql_col/: test_add_radd.py  test_call.py  test_str_representation.py
tests/test_sql_cols/: test_add_radd.py  test_call.py  test_inline.py  test_list_builtins.py  test_multiline.py  test_str_representation.py
tests/test_sql_container/: test_add_radd.py  test_bool.py  test_container_filled_by_section_call.py  test_del_vars.py  test_dumps.py  test_indent.py  test_init.py  test_json_variable.py  test_reset_vars.py  test_set_vars.py  test_unwrap.py  test_wrap.py
tests/test_sql_cte/: test_call.py  test_clear.py  test_delitem.py  test_getitem.py  test_init.py  test_iter.py  test_pop.py  test_reg.py  test_setitem.py  test_str.py
tests/test_sql_enum/: test_add_radd.py  test_call.py  test_inline.py  test_list_builtins.py  test_multiline.py  test_str_representation.py
tests/test_sql_filter/: test_add_radd.py  test_and.py  test_and_or_together.py  test_call.py  test_or.py  (+1 more)
(+98 files in other folders)
