[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlconstructor"
version = "1.1.3"
authors = [
  { name="Andrey Smirnov", email="smirnovcode@mail.ru" },
]
description = "Let you build SQL requests in pythonic way. SQL blocks could be nested and flexible as you want it to be, constructed dynamically and look pretty! You could also build request once and cache it (but still use variables to replace dynamically). Solid solution!"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Github repo" = "https://github.com/akvilary/sqlconstructor"
"Bug tracker" = "https://github.com/akvilary/sqlconstructor/issues"
"Release notes in Telegram" = "https://t.me/sqlconstructor"
